Removed Trove due to its outdated API and negligible memory benefits (<=1%)