@@ -1,21 +1,17 @@
 package com.aionemu.gameserver.dataholders;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.*;
 import java.util.stream.Stream;
 
 import javax.xml.bind.Unmarshaller;
 import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.XmlRootElement;
+import javax.xml.bind.annotation.XmlTransient;
 
 import com.aionemu.gameserver.model.templates.spawns.Spawn;
 import com.aionemu.gameserver.model.templates.towns.TownLevel;
 import com.aionemu.gameserver.model.templates.towns.TownSpawn;
 import com.aionemu.gameserver.model.templates.towns.TownSpawnMap;
-
-import gnu.trove.map.hash.TIntObjectHashMap;
 
 /**
  * @author ViAl
@@ -26,17 +22,17 @@ public class TownSpawnsData {
 	@XmlElement(name = "spawn_map")
 	private List<TownSpawnMap> spawnMap;
 
-	private TIntObjectHashMap<TownSpawnMap> spawnMapsData = new TIntObjectHashMap<>();
+	@XmlTransient
+	private final Map<Integer, TownSpawnMap> spawnMapsData = new HashMap<>();
 	private Set<Integer> allNpcIds;
 
 	void afterUnmarshal(Unmarshaller u, Object parent) {
 		allNpcIds = new HashSet<>();
 		for (TownSpawnMap map : spawnMap) {
 			Stream<Spawn> spawns = map.getTownSpawns().stream().flatMap(ts -> ts.getTownLevels().stream().flatMap(tl -> tl.getSpawns().stream()));
-			allNpcIds.addAll(spawns.map(Spawn::getNpcId).collect(Collectors.toList()));
+			allNpcIds.addAll(spawns.map(Spawn::getNpcId).toList());
 			spawnMapsData.put(map.getMapId(), map);
 		}
-		spawnMap.clear();
 		spawnMap = null;
 	}
 
@@ -45,7 +41,7 @@ public class TownSpawnsData {
 	 */
 	public int getSpawnsCount() {
 		int counter = 0;
-		for (TownSpawnMap spawnMap : spawnMapsData.valueCollection())
+		for (TownSpawnMap spawnMap : spawnMapsData.values())
 			for (TownSpawn townSpawn : spawnMap.getTownSpawns())
 				for (TownLevel townLevel : townSpawn.getTownLevels())
 					counter += townLevel.getSpawns().size();
@@ -58,7 +54,7 @@ public class TownSpawnsData {
 	 * @return
 	 */
 	public List<Spawn> getSpawns(int townId, int townLevel) {
-		for (TownSpawnMap spawnMap : spawnMapsData.valueCollection()) {
+		for (TownSpawnMap spawnMap : spawnMapsData.values()) {
 			if (spawnMap.getTownSpawn(townId) != null) {
 				TownSpawn townSpawn = spawnMap.getTownSpawn(townId);
 				return townSpawn.getSpawnsForLevel(townLevel).getSpawns();
@@ -68,7 +64,7 @@ public class TownSpawnsData {
 	}
 
 	public int getWorldIdForTown(int townId) {
-		for (TownSpawnMap spawnMap : spawnMapsData.valueCollection())
+		for (TownSpawnMap spawnMap : spawnMapsData.values())
 			if (spawnMap.getTownSpawn(townId) != null)
 				return spawnMap.getMapId();
 		return 0;
